--- a/src/components/page-header/page-header.css
+++ b/src/components/page-header/page-header.css
@@ -1,43 +1,3 @@
-.company-branding {
-    width: 90%;
-    max-width: 1200px;
-    margin: 10px auto;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: flex-end;
-    flex-wrap: wrap;
-    row-gap: 10px;
-    column-gap: 40px;
-}
-
-@media screen and (min-width: 693px) {
-    .company-branding {
-        flex-direction: row;
-        align-items: center;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .company-branding {
-        justify-content: space-between;
-    }
-}
-
-.company-branding .logo-wrapper {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 10px;
-}
-
-@media screen and (min-width: 768px) {
-    .company-branding .logo-wrapper {
-        gap: 20px;
-    }
-}
-
-.company-branding .logo-wrapper .image-wrapper {
-    width: 10vw;
-    max-width: 80px;
+.page-header {
+    overflow: hidden;
 }
